# tecent_embedding_api

./: README.md
embedding_api/: .dockerignore  Dockerfile  pyproject.toml
embedding_api/app/: main.py
notebooks/: Untitled.ipynb  embeddings.pickle
